kubernetes/openfaas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openfaas-svc
spec:
  ports:
  - port: 31112
    targetPort: 31112
    protocol: TCP
  selector:
    app: openfaas
  type: ClusterIP
