kubernetes/openfaas/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: openfaas-ing
spec:
  rules:
  - host: openfaas.docker.localhost
    http:
      paths:
      - backend:
          serviceName: openfaas-svc
          servicePort: 31112
        path: /
